# telegram-template

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
fastapi_requests/: fastapi_create_example.py  fastapi_delete_example.py  fastapi_update_example.py
fastapi_response/: __init__.py  fastapi_create_items.py  fastapi_delete_items.py  fastapi_update_items.py
pyrogram_commands/: pyrogram_add_user.py  pyrogram_check_user.py  pyrogram_create_items.py  pyrogram_delete_items.py  pyrogram_update_items.py
tortoise_models/: basemodel.py
